OGPの追加、Aboutのレイアウトと文言修正

--- a/kon_karin/public/index.html
+++ b/kon_karin/public/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>kon_karin</title>
+    <meta property="og:title" content="kon_karin's portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://konkarin-portfolio.firebaseapp.com/" />
+    <meta property="og:description" content="kon_karinのポートフォリオサイト" />
+    <meta property="og:image" content="https://konkarin-portfolio.firebaseapp.com/img/HomeImg.97109707.jpg" />
+    <title>kon_karin's portfolio</title>
   </head>
   <body>
     <noscript>
